<resources>
    <string name="app_name">WebsocketIntgration</string>
    <string name="hello_world">Hello Websocket</string>
    <string name="action_settings">Settings</string>
    <string name="enter_username">Enter your username</string>
    <string name="enter_url">Enter server URL</string>
    <string name="write_message">Write message</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="not_account_yet">No account yet? Create one</string>
    <string name="email">Email</string>
</resources>
