<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="presenter"
            type="socket.web.com.websocketintgration.presentation.presenters.interfaces.SignUpPresenter" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="50dp"
        android:paddingStart="50dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight_dp"
            android:textColorHint="@color/colorTransparentWhite"
            app:layout_constraintBottom_toTopOf="@+id/emailContainer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <EditText
                android:id="@+id/usernameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorTransparentWhite"
            app:layout_constraintBottom_toTopOf="@+id/passwordContainer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="@dimen/eight_dp"
            app:layout_constraintTop_toBottomOf="@+id/usernameContainer">

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorTransparentWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailContainer">

            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/createAccountBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:background="@color/colorPrimaryDark"
            android:elevation="@dimen/four_dp"
            android:text="@string/create_account"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            android:onClick="@{() -> presenter.registration(usernameEt.getText().toString(),emailEt.getText().toString(),passwordEt.getText().toString())}"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordContainer" />

    </android.support.constraint.ConstraintLayout>

</layout>